[package]
name = "aktoer-zmq"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]

[dependencies]
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
futures = "0.3"
indexmap = "1"
pin-project = "1"
static_assertions = "1"
tracing = "0.1"
zmq = "0.9"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
tracing-subscriber = "0.2"
